# nemo-spinup-evaluation

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AGENTS.md  CONTRIBUTING.md  DINO_config.yaml  DINO_config_default.yaml  LICENSE  README.md  main.py  metrics.py  pyproject.toml  requirements.txt  utils.py  variable_aliases.py
.github/workflows/: ci-eval.yml  docs.yml  formatting.yml
configs/: DINO-setup.yaml
docs/: README.md  requirements.txt
docs/source/: Command-Line-Interface.md  Evaluation-Modes.md  Evaluation.md  Model-Configuration.md  New-Metrics.md  conf.py  index.md  index.rst  modules.rst  nemo_spinup_evaluation.rst
results/: metrics_results_grid.csv  metrics_results_grid.txt  metrics_results_restart.txt
spinup_eval/: __init__.py  main.py  metrics.py
src/: __init__.py  loader.py  metrics.py  metrics_io.py  standardise_inputs.py  statistical_metrics.py  utils.py
src/nemo_spinup_evaluation/: __init__.py  __main__.py  cli.py  loader.py  metrics.py  metrics_io.py  restructure.py  standardise_inputs.py  utils.py
src/spinup_evaluation/: OM4_reformat.py  __init__.py  __main__.py  cli.py  loader.py  metrics.py  metrics_io.py  standardise_inputs.py
src/spinup_evaluation/xgran/: analysis.py  cache.py  compute.py  fix_time.py  materialise.py
tests/: DINO-test-setup.yaml  get-data.sh  test_evaluation.py  test_import.py  test_load_actual_netcdf.py  test_loader.py
tests/data/results/diff/: metrics_results_grid.csv  metrics_results_grid_summary.csv  metrics_results_restart.csv  metrics_results_restart_summary.csv
tests/data/results/original/: metrics_results_grid.csv  metrics_results_restart.csv  metrics_results_restart_summary.csv
tests/data/results/self/: metrics_results_grid.csv  metrics_results_restart.csv  metrics_results_restart_summary.csv
tests/data/results_resampled/: metrics_results_grid.csv  metrics_results_restart.csv
tests/utils/: build_fixtures.sh  create_test_data.py  resample_test_data.sh
