[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spinup-evaluation"
version = "0.1.0"
description = "Climate model spinup evaluation metrics and diagnostics"
requires-python = ">=3.9"
authors = [
  {name = "Matt Archer", email = "ma595@cam.ac.uk"},
  {name = "Surbhi Goel", email = "sg2147@cam.ac.uk"},
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["machine-learning", "benchmarking", "oceanography", "climate-modeling", "nemo", "diagnostics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "xarray[io]>=2024.7.0",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-cov",
    "mypy",
    "pre-commit",
]

[project.urls]
Repository = "https://github.com/m2lines/Spinup-Evaluation"
Issues = "https://github.com/m2lines/Spinup-Evaluation/issues"
Documentation = "https://spinup-evaluation.readthedocs.io"

[project.scripts]
spinup-eval = "spinup_evaluation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["spinup_evaluation*"]

[tool.ruff]
src = ["src", "tests"]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["D", "PL", "I", "E", "W", "NPY", "FLY", "F", "RUF",
          "ARG", "SLF", "S", "BLE","B", "A", "C4", "EM", "ICN", "PIE", "Q", "RSE",
          "SIM", "TID"]
extend-select = ["D417"]

# Ignore SIM108 (use ternary instead of if-else) as I think it can obscure intent.
# Ignore RUF002 (ambiguous characters) as it does not allow apostrophes in strings.
# Ignore PLR0913 (too many arguments) will be addressed eventually.
ignore = ["SIM108", "RUF002", "PLR0913"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "S101"]
"__init__.py" = ["D104"]

[tool.pytest.ini_options]
testpaths = [
  "./tests"
]
